          fonts to draw themselves.
        - FontBase::drawChar() returns the x co-ordinate for the next character,
          allowing the font and TextWriter classes to handle proportional fonts.
        - Added getStringWidth() functions for determining the pixel width of a
          string when printed with a given font, allowing gadgets to work with
          proportional fonts.


  V0.30 (20080326)

  - Fixes:
     - Removed EventHandler inheritance from Gadget.
     - Added EventHandler inheritance to AmigaScreen and SkinnedScreen.
     - Minor optimisation in TextBox click() and release() functions.
     - Added more DMA_Active() checks to fix SuperBitmap DMA problems.
     - Made EventHandler an abstract class.
     - Removed post-DMA waits.
     - Added cache flushing to fix empty pixels when using DMA hardware.
     - Fixed incorrect vector pointer in Gadget::moveHiddenToChildList().
     - Font::scanGlyph() no longer scans past the end of its bitmap's memory.
     - Tidied up Debug class.
     - Added javadoc comments to more files.
     - Swapped ScrollingPanel and ScrollableBase to use a more logical model
       of the scrolling region.
     - Made Gadget::getX() and Gadget::getY() const.
     - Fixed SliderVertical bugs.
     - Added scrollbar to Debug GUI.
     - Fixed incorrect line count in Text::wrap() function.
     - Fixed incorrect check for movement in all gadget drag() functions.
     - Removed unnecessary bitmap dimensions from AnimButton class.
     - Made Gradient::resize() public.
     - Removed "auto drawing" code from MultiLineTextBox.
     - Switched to using visibility toggle in Debug class to optimise textbox
       redraws.
     - Changed value of TOP_SCREEN_Y_OFFSET to 512 to enable bitmask checking.
     - ScreenDepthButton uses GraphicsPort for all drawing operations.
     - Tidied up some of the includes and dependencies.
     - Removed SimpleScreen and SimpleWindow classes.