@@ -1,6 +1,6 @@
 #include "monofont.h"
 
-MonoFont::MonoFont(const u16* bitmap, u16 bitmapWidth, u16 bitmapHeight, u8 width, u8 height, u16 drawColour) : FontBase(bitmapWidth, bitmapHeight, width, height) {
+MonoFont::MonoFont(const u16* bitmap, u16 bitmapWidth, u16 bitmapHeight, u8 width, u8 height, u16 drawColour) : FixedWidthFontBase(bitmapWidth, bitmapHeight, width, height) {
 	_bitmap = bitmap;
 
 	setTransparentColour(0);
